# ChessReview

./: CMakeLists.txt  README.md  opening_book.txt
src/: bot.cpp  bot.hpp  main.cpp
